--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/shop-item.css" rel="stylesheet">
+    <link href="css/certificar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,9 +43,9 @@
             </div>
 
             <div class="col-md-9">
-              <h1>
+              <h4 class="font-color">
                 Manutenção Periódica
-              </h1>
+              </h4>
               <p>
                 Para um processo de manutenção da certificação, existem alguns fatores que precisam ser avaliados para determinar se ensaios são aplicáveis ou se conseguimos fazer a manutenção apenas com evidências documentais.
                 São eles:<br>
