--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/shop-item.css" rel="stylesheet">
+    <link href="css/certificar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-            <div class="col-md-9"><h1>Dicas para acelerar o processo de certificação</h1>
+            <div class="col-md-9"><h4 class="font-color">Dicas para acelerar o processo de certificação</h4>
               <p>
                 - Enviar a especificação técnica do produto contendo todas as informações completas do produto, conforme itens abaixo. Com isso evita-se retrabalhos, atrasos e custos inesperados no processo:<br><br>
 
