--- a/page3.html
+++ b/page3.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/shop-item.css" rel="stylesheet">
+    <link href="css/certificar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-            <div class="col-md-9"><h1>Recomendações para o envio de amostras</h1>
+            <div class="col-md-9"><h4 class="font-color">Recomendações para o envio de amostras</h4>
               <p>
                 • Use Fedex or DHL<br>
                 • Do NOT declare a price above US$ 3,000.00 in the shipping invoice. If necessary, split the material in different boxes and send them in different days so we do not exceed the 3000 limit.<br>
