--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/shop-item.css" rel="stylesheet">
+    <link href="css/certificar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,7 +41,7 @@
             </div>
 
             <div class="col-md-9">
-              <h1>Documentos necessários para certificação - Anatel</h1>
+              <h4 class="font-color">Documentos necessários para certificação - Anatel</h4>
               <div class="panel-group" id="accordion">
                   <div class="panel panel-default">
                       <div class="panel-heading">
