--- a/page3.html
+++ b/page3.html
@@ -35,14 +35,14 @@
 
             <div class="col-md-3">
                 <div class="list-group">
-                    <a href="index.html" class="list-group-item">Documentos necessários para certificação - Anatel</a>
+                    <a href="index.html" class="list-group-item">Documentos necessários</a>
                     <a href="page1.html" class="list-group-item">Manutenção periódica</a>
                     <a href="page2.html" class="list-group-item">Dicas para acelerar o processo de certificação</a>
                     <a href="page3.html" class="list-group-item active">Recomendações para o envio de amostras</a>
                 </div>
             </div>
 
-            <div class="col-md-9"><h4 class="font-color">Recomendações para o envio de amostras</h4>
+            <div class="col-md-9"><h4>Recomendações para o envio de amostras</h4>
               <p>
                 • Use Fedex or DHL<br>
                 • Do NOT declare a price above US$ 3,000.00 in the shipping invoice. If necessary, split the material in different boxes and send them in different days so we do not exceed the 3000 limit.<br>
