--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="col-md-3">
                 <div class="list-group">
-                    <a href="index.html" class="list-group-item active">Documentos necessários para certificação - Anatel</a>
+                    <a href="index.html" class="list-group-item active">Documentos necessários</a>
                     <a href="page1.html" class="list-group-item">Manutenção periódica</a>
                     <a href="page2.html" class="list-group-item">Dicas para acelerar o processo de certificação</a>
                     <a href="page3.html" class="list-group-item">Recomendações para o envio de amostras</a>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="col-md-9">
-              <h4 class="font-color">Documentos necessários para certificação - Anatel</h4>
+              <h4>Documentos necessários</h4>
               <div class="panel-group" id="accordion">
                   <div class="panel panel-default">
                       <div class="panel-heading">
