--- a/page1.html
+++ b/page1.html
@@ -35,7 +35,7 @@
 
             <div class="col-md-3">
                 <div class="list-group">
-                    <a href="index.html" class="list-group-item">Documentos necessários para certificação - Anatel</a>
+                    <a href="index.html" class="list-group-item">Documentos necessários</a>
                     <a href="page1.html" class="list-group-item active">Manutenção periódica</a>
                     <a href="page2.html" class="list-group-item">Dicas para acelerar o processo de certificação</a>
                     <a href="page3.html" class="list-group-item">Recomendações para o envio de amostras</a>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="col-md-9">
-              <h4 class="font-color">
+              <h4>
                 Manutenção Periódica
               </h4>
               <p>
