--- a/page2.html
+++ b/page2.html
@@ -35,14 +35,14 @@
 
             <div class="col-md-3">
                 <div class="list-group">
-                    <a href="index.html" class="list-group-item">Documentos necessários para certificação - Anatel</a>
+                    <a href="index.html" class="list-group-item">Documentos necessários</a>
                     <a href="page1.html" class="list-group-item">Manutenção periódica</a>
                     <a href="page2.html" class="list-group-item active">Dicas para acelerar o processo de certificação</a>
                     <a href="page3.html" class="list-group-item">Recomendações para o envio de amostras</a>
                 </div>
             </div>
 
-            <div class="col-md-9"><h4 class="font-color">Dicas para acelerar o processo de certificação</h4>
+            <div class="col-md-9"><h4>Dicas para acelerar o processo de certificação</h4>
               <p>
                 - Enviar a especificação técnica do produto contendo todas as informações completas do produto, conforme itens abaixo. Com isso evita-se retrabalhos, atrasos e custos inesperados no processo:<br><br>
 
