--- a/page2.html
+++ b/page2.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-            <div class="col-md-9"><h4>Dicas para acelerar o processo de certificação</h4>
+            <div class="col-md-9"><h4 class="font-color">Dicas para acelerar o processo de certificação</h4>
               <p>
                 - Enviar a especificação técnica do produto contendo todas as informações completas do produto, conforme itens abaixo. Com isso evita-se retrabalhos, atrasos e custos inesperados no processo:<br><br>
 
