--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="col-md-9">
-              <h4>Documentos necessários</h4>
+              <h4 class="font-color">Documentos necessários</h4>
               <div class="panel-group" id="accordion">
                   <div class="panel panel-default">
                       <div class="panel-heading">
