--- a/page1.html
+++ b/page1.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="col-md-9">
-              <h4>
+              <h4 class="font-color">
                 Manutenção Periódica
               </h4>
               <p>
