--- a/page3.html
+++ b/page3.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-            <div class="col-md-9"><h4>Recomendações para o envio de amostras</h4>
+            <div class="col-md-9"><h4 class="font-color">Recomendações para o envio de amostras</h4>
               <p>
                 • Use Fedex or DHL<br>
                 • Do NOT declare a price above US$ 3,000.00 in the shipping invoice. If necessary, split the material in different boxes and send them in different days so we do not exceed the 3000 limit.<br>
