--- a/page2.html
+++ b/page2.html
@@ -55,9 +55,9 @@
 
                 - como o produto é alimentado (Ex: bateria, fonte de alimentação, carregador veicular, USB...etc);<br>
 
-                - Ao preparar as amostras para envio, certificar-se que as mesmas estão identificadas corretamente. Ex: Se o modelo do produto sob certificação é “modelo X”, é muito importante que haja nas amostras alguma etiqueta ou qualquer tipo de identificação que mostre este nome de modelo descrito no produto;<br>
+                - Ao preparar as amostras para envio, certificar-se que as mesmas estão identificadas corretamente. <br>Ex: Se o modelo do produto sob certificação é “modelo X”, é muito importante que haja nas amostras alguma etiqueta ou qualquer tipo de identificação que mostre este nome de modelo descrito no produto;<br>
 
-                - Ao enviar as amostras para a Versys é recomendável que, no pacote esteja descrito o número de processo Versys e que haja instruções para a realização dos ensaios. Desta forma, o projeto e identificado rapidamente e com as instruções podemos interagir mais rapidamente com o laboratório também afim de agilizar a realização dos ensaios;<br>
+                - Ao enviar as amostras para a Versys é recomendável que, no pacote esteja descrito o número de processo Versys e que haja instruções para a realização dos ensaios.<br> Desta forma, o projeto e identificado rapidamente e com as instruções podemos interagir mais rapidamente com o laboratório também afim de agilizar a realização dos ensaios;<br>
 
                 - Encaminhar toda documentação do processo de certificação antes da emissão dos relatórios de ensaios. Com isso, evitaremos atrasos e poderemos realizar uma avaliação parcial do que for enviado e para lhe fornecer um feedback sobre possíveis correções necessárias;<br>
 
