--- a/page3.html
+++ b/page3.html
@@ -52,7 +52,7 @@
                 In case the value is really over than US$ 3000,00, it is recommendable to proceed with a temporary importation. This takes more time and it is not too much cheap, but the client avoid that the material is stuck at the Custom’s Office.<br>
                 For temporary importations, if you need, I can recommend you some company to assist you.<br><br>
               </p>
-              <img src="img/dhl-fedex.png">
+              <img src="img/import.png">
 
             </div>
 
