--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 
     <!-- Custom CSS -->
     <link href="css/certificar.css" rel="stylesheet">
@@ -36,7 +37,6 @@
                     <a href="index.html" class="list-group-item active">Documentos necessários</a>
                     <a href="page1.html" class="list-group-item">Manutenção periódica</a>
                     <a href="page2.html" class="list-group-item">Dicas para acelerar o processo de certificação</a>
-                    <a href="page3.html" class="list-group-item">Recomendações para o envio de amostras</a>
                 </div>
             </div>
 
