--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
                             Se houver apenas uma unidade fabril para produtos dessas categorias, o certificado ISO 9001 2008 não precisa ser apresentado.<br><br>
 
-                            Importante: o Certificado ISSO 9001 2008, quando aplicável e na situação de estar em idioma estrangeiro, sempre precisa vir acompanhado da tradução juramentada para o português.<br>
+                            Importante: o Certificado ISO 9001 2008, quando aplicável e na situação de estar em idioma estrangeiro, sempre precisa vir acompanhado da tradução juramentada para o português.<br>
                             Caso necessite, podemos ajudá-lo com este serviço de tradução.
 
                           </div>
