--- a/index_en.html
+++ b/index_en.html
@@ -35,8 +35,8 @@
             <div class="col-md-3">
                 <div class="list-group">
                     <a href="index_en.html" class="list-group-item active">Documentation required</a>
-                    <a href="page1_en.html" class="list-group-item">Manutenção periódica</a>
-                    <a href="page2_en.html" class="list-group-item">Dicas para acelerar o processo de certificação</a>
+                    <a href="page1_en.html" class="list-group-item">Renewal Process</a>
+                    <a href="page2_en.html" class="list-group-item">Tips to speed up the process</a>
                 </div>
             </div>
 
