--- a/page1_en.html
+++ b/page1_en.html
@@ -37,40 +37,39 @@
             <div class="col-md-3">
                 <div class="list-group">
                   <a href="index_en.html" class="list-group-item">Documentation required</a>
-                  <a href="page1_en.html" class="list-group-item active">Manutenção periódica</a>
-                  <a href="page2_en.html" class="list-group-item">Dicas para acelerar o processo de certificação</a>
+                  <a href="page1_en.html" class="list-group-item active">Renewal Process</a>
+                  <a href="page2_en.html" class="list-group-item">Tips to speed up the process</a>
                 </div>
             </div>
 
             <div class="col-md-9">
               <h4 class="font-color">
-                Manutenção Periódica
+                Renewal Process
               </h4>
               <p>
-                Para um processo de manutenção da certificação, existem alguns fatores que precisam ser avaliados para determinar se ensaios são aplicáveis ou se conseguimos fazer a manutenção apenas com evidências documentais.
-                São eles:<br>
-                1 - Se o produto sofreu modificações ou não desde a última certificação;<br>
-                2 - Se a ANATEL mudou a regulamentação no período;<br>
-                3 - Se o produto apresentou alguma não conformidade na certificação inicial que tornou necessária a realização de alguma alteração para adequação;<br>
-                4 - Se é aplicável a Resolução 529 (Ensaios de Segurança) ao produto. Caso positivo, é exigido que este ensaio seja repetido na manutenção, não importando a resposta dos itens anteriores.<br><br>
+                For a renewal process, there are some factors that need to be considered in order to determine whether tests are applicable or if we can proceed with the renewal only with the documentation. They are the following:<br>
+                 1 - If the product has been modified since the last certification or not;<br>
+                 2 - If ANATEL changed the rules during the period;<br>
+                 3 - If the product presented any non-conformity in the initial certification that became necessary to modify the product in order to attend the regulation;<br>
+                 4 - If it is applicable the Resolution 529 (Safety Testing). If so, it is required to repeat this test in the renewal, even if the answer to the previous items is “No”. <br><br>
 
-                Documentação para produto que não sofreu alteração<br>
-                •	Declaração de manutenção (fornecemos o template)<br>
-                •	Fotos externas atuais do produto <br>
-                •	Fotos internas atuais do produto<br>
-                •	Relatórios de Ensaios (será confirmada a necessidade ou não de ensaios após avaliação dos 04 itens acima)<br>
-                •	Certificado ISO 9001 da Unidade fabril – quando aplicável<br><br>
+                 Documentation needed when the product has not suffered changes:<br>
+                • Renewal Letter (we can provide you a template)<br>
+                • Current external pictures<br>
+                • Current internal pictures<br>
+                • Test reports (it will be confirmed if tests are needed or not after we check the 04 items listed previously)<br>
+                • ISO 9001 2008 Certificate for the factory (when applicable)<br><br>
 
-                Documentação para produto que sofreu alteração <br>
-                •	Declaração de manutenção (fornecemos o template)<br>
-                •	Fotos externas atuais do produto<br>
-                •	Fotos internas atuais do produto<br>
-                •	Foto da etiqueta de identificação do modelo<br>
-                •	Certificado ISO 9001 da Unidade fabril – quando aplicável<br>
-                •	Relatórios de ensaios (será confirmada a necessidade ou não de ensaios após avaliarmos os 04 itens descritos inicialmente)<br>
-                •	Manual do produto <br>
-                •	Especificação Técnica <br>
-                •	Esquema elétrico<br>
+                 Documentation needed when the product has suffered changes:<br>
+                • Renewal Letter (we can provide you a template)<br>
+                • Current external pictures<br>
+                • Current internal pictures<br>
+                • ISO 9001 2008 Certificate for the factory (when applicable)<br>
+                • Test reports (it will be confirmed if tests are needed or not after we check the 04 items listed previously)<br>
+                • Product Manual (in case it has been updated)<br>
+                • Technical specification (in case it has been updated)<br>
+                • Electric scheme<br>
+
               </p>
 
 
