--- a/page2_en.html
+++ b/page2_en.html
@@ -37,29 +37,26 @@
             <div class="col-md-3">
                 <div class="list-group">
                   <a href="index_en.html" class="list-group-item">Documentation required</a>
-                  <a href="page1_en.html" class="list-group-item">Manutenção periódica</a>
-                  <a href="page2_en.html" class="list-group-item active">Dicas para acelerar o processo de certificação</a>
+                  <a href="page1_en.html" class="list-group-item">Renewal Process</a>
+                  <a href="page2_en.html" class="list-group-item active">Tips to speed up the process</a>
                 </div>
             </div>
 
-            <div class="col-md-9"><h4 class="font-color">Dicas para acelerar o processo de certificação</h4>
+            <div class="col-md-9"><h4 class="font-color">Tips to speed up the process</h4>
               <p>
-                - Enviar a especificação técnica do produto contendo todas as informações completas do produto, conforme itens abaixo. Com isso evita-se retrabalhos, atrasos e custos inesperados no processo:<br><br>
+                - Send the product specification containing the complete information regarding the product, as items below. The complete information avoids rework, unexpected delays and costs in the process:<br><br>
 
-                - Frequência de operação do produto<br>
-                - Tecnologias aplicáveis <br>
-                - Aplicação do produto<br>
-                - Local de instalação<br>
-                - Se o produto pode ser operado pelo usuário comum ou apenas por profissionais especializados<br>
-
-
-                - como o produto é alimentado (Ex: bateria, fonte de alimentação, carregador veicular, USB...etc);<br>
-
-                - Ao preparar as amostras para envio, certificar-se que as mesmas estão identificadas corretamente. <br>Ex: Se o modelo do produto sob certificação é “modelo X”, é muito importante que haja nas amostras alguma etiqueta ou qualquer tipo de identificação que mostre este nome de modelo descrito no produto;<br>
-
-                - Ao enviar as amostras para a Versys é recomendável que, no pacote esteja descrito o número de processo Versys e que haja instruções para a realização dos ensaios.<br> Desta forma, o projeto e identificado rapidamente e com as instruções podemos interagir mais rapidamente com o laboratório também afim de agilizar a realização dos ensaios;<br>
-
-                - Encaminhar toda documentação do processo de certificação antes da emissão dos relatórios de ensaios. Com isso, evitaremos atrasos e poderemos realizar uma avaliação parcial do que for enviado e para lhe fornecer um feedback sobre possíveis correções necessárias;<br>
+                - Frequency Band<br>
+                - Applicable Technologies<br>
+                - Product Application<br>
+                - Where the product is installed<br>
+                - If the product can be operated by the final user or only by professionals<br>
+                - How the product is supplied (Example: battery, power supply, car charger, USB ... etc);<br>
+                - When preparing the samples for the shipment, make sure they are correctly identified with model name.<br><br>
+                Example: If the model name of the product under certification is "Model X", it is very important that the samples have a label or any identification that shows this model name;<br>
+                - When sending the samples to the Versys it is highly recommended that you describe on the package, the Versys project number and also send instructions for testing.<br><br>
+                With this, the project can be identified quickly and with the instructions we can interact with the laboratory in order to speed up the testing;<br>
+                - Send all documents before the issuance of the test reports. With this, we will avoid delays, as we can have partial evaluations and provide you a feedback confirming if corrections are needed or not.<br>
 
               </p>
             </div>
