--- a/page1.html
+++ b/page1.html
@@ -34,15 +34,15 @@
 
         <div class="row">
 
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a href="index.html" class="list-group-item">Documentos necessários</a>
-                    <a href="page1.html" class="list-group-item active">Manutenção periódica</a>
-                    <a href="page2.html" class="list-group-item">Dicas para acelerar o processo de certificação</a>
-                </div>
+          <div class="col-md-4">
+            <div class="list-group">
+              <a href="index.html" class="list-group-item"><center>Documentos necessários</center></a>
+              <a href="page1.html" class="list-group-item active"><center>Manutenção periódica</center></a>
+              <a href="page2.html" class="list-group-item"><center>Dicas para acelerar o processo de certificação</center></a>
             </div>
+          </div>
 
-            <div class="col-md-9">
+          <div class="col-md-8">
               <h4 class="font-color">
                 Manutenção Periódica
               </h4>
