--- a/page2.html
+++ b/page2.html
@@ -34,15 +34,16 @@
 
         <div class="row">
 
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a href="index.html" class="list-group-item">Documentos necessários</a>
-                    <a href="page1.html" class="list-group-item">Manutenção periódica</a>
-                    <a href="page2.html" class="list-group-item active">Dicas para acelerar o processo de certificação</a>
-                </div>
+          <div class="col-md-4">
+            <div class="list-group">
+              <a href="index.html" class="list-group-item"><center>Documentos necessários</center></a>
+              <a href="page1.html" class="list-group-item"><center>Manutenção periódica</center></a>
+              <a href="page2.html" class="list-group-item active"><center>Dicas para acelerar o processo de certificação</center></a>
             </div>
+          </div>
 
-            <div class="col-md-9"><h4 class="font-color">Dicas para acelerar o processo de certificação</h4>
+          <div class="col-md-8">
+              <h4 class="font-color">Dicas para acelerar o processo de certificação</h4>
               <p>
                 - Enviar a especificação técnica do produto contendo todas as informações completas do produto, conforme itens abaixo. Com isso evita-se retrabalhos, atrasos e custos inesperados no processo:<br><br>
 
