--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
     <div class="row">
 
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="list-group">
-          <a href="index.html" class="list-group-item active">Documentos necessários</a>
-          <a href="page1.html" class="list-group-item">Manutenção periódica</a>
-          <a href="page2.html" class="list-group-item">Dicas para acelerar o processo de certificação</a>
+          <a href="index.html" class="list-group-item active"><center>Documentos necessários</center></a>
+          <a href="page1.html" class="list-group-item"><center>Manutenção periódica</center></a>
+          <a href="page2.html" class="list-group-item"><center>Dicas para acelerar o processo de certificação</center></a>
         </div>
       </div>
 
-      <div class="col-md-9">
+      <div class="col-md-8">
         <h4 class="font-color">Documentos necessários</h4>
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
