--- a/page1_en.html
+++ b/page1_en.html
@@ -34,15 +34,15 @@
 
         <div class="row">
 
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="list-group">
-                  <a href="index_en.html" class="list-group-item">Documentation required</a>
-                  <a href="page1_en.html" class="list-group-item active">Renewal Process</a>
-                  <a href="page2_en.html" class="list-group-item">Tips to speed up the process</a>
+                  <a href="index_en.html" class="list-group-item"><center>Documentation required</center></a>
+                  <a href="page1_en.html" class="list-group-item active"><center>Renewal Process</center></a>
+                  <a href="page2_en.html" class="list-group-item"><center>Tips to speed up the process</center></a>
                 </div>
             </div>
 
-            <div class="col-md-9">
+            <div class="col-md-8">
               <h4 class="font-color">
                 Renewal Process
               </h4>
