font and accordion

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="col-md-8">
-        <h4 class="font-color">Documentos necessários</h4>
+        <h4 class="font-color"><center>Documentos necessários</center></h4>
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
             <div class="panel-heading">
