--- a/page1_en.html
+++ b/page1_en.html
@@ -42,38 +42,44 @@
                 </div>
             </div>
 
-            <div class="col-md-8">
-              <h4 class="font-color">
-                Renewal Process
-              </h4>
-              <p>
-                For a renewal process, there are some factors that need to be considered in order to determine whether tests are applicable or if we can proceed with the renewal only with the documentation. They are the following:<br>
-                 1 - If the product has been modified since the last certification or not;<br>
-                 2 - If ANATEL changed the rules during the period;<br>
-                 3 - If the product presented any non-conformity in the initial certification that became necessary to modify the product in order to attend the regulation;<br>
-                 4 - If it is applicable the Resolution 529 (Safety Testing). If so, it is required to repeat this test in the renewal, even if the answer to the previous items is “No”. <br><br>
 
-                 Documentation needed when the product has not suffered changes:<br>
-                • Renewal Letter (we can provide you a template)<br>
-                • Current external pictures<br>
-                • Current internal pictures<br>
-                • Test reports (it will be confirmed if tests are needed or not after we check the 04 items listed previously)<br>
-                • ISO 9001 2008 Certificate for the factory (when applicable)<br><br>
+                      <div class="col-md-8">
+                        <div class="panel-group">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <p class="accordion-toggle"><center>Renewal Process</center></p>
+                                    </h4>
+                                </div>
+                                    <div class="panel-body">
+                                      <p>
+                                        For a renewal process, there are some factors that need to be considered in order to determine whether tests are applicable or if we can proceed with the renewal only with the documentation. They are the following:<br>
+                                         1 - If the product has been modified since the last certification or not;<br>
+                                         2 - If ANATEL changed the rules during the period;<br>
+                                         3 - If the product presented any non-conformity in the initial certification that became necessary to modify the product in order to attend the regulation;<br>
+                                         4 - If it is applicable the Resolution 529 (Safety Testing). If so, it is required to repeat this test in the renewal, even if the answer to the previous items is “No”. <br><br>
 
-                 Documentation needed when the product has suffered changes:<br>
-                • Renewal Letter (we can provide you a template)<br>
-                • Current external pictures<br>
-                • Current internal pictures<br>
-                • ISO 9001 2008 Certificate for the factory (when applicable)<br>
-                • Test reports (it will be confirmed if tests are needed or not after we check the 04 items listed previously)<br>
-                • Product Manual (in case it has been updated)<br>
-                • Technical specification (in case it has been updated)<br>
-                • Electric scheme<br>
+                                         Documentation needed when the product has not suffered changes:<br>
+                                        • Renewal Letter (we can provide you a template)<br>
+                                        • Current external pictures<br>
+                                        • Current internal pictures<br>
+                                        • Test reports (it will be confirmed if tests are needed or not after we check the 04 items listed previously)<br>
+                                        • ISO 9001 2008 Certificate for the factory (when applicable)<br><br>
 
-              </p>
-
-
-            </div>
+                                         Documentation needed when the product has suffered changes:<br>
+                                        • Renewal Letter (we can provide you a template)<br>
+                                        • Current external pictures<br>
+                                        • Current internal pictures<br>
+                                        • ISO 9001 2008 Certificate for the factory (when applicable)<br>
+                                        • Test reports (it will be confirmed if tests are needed or not after we check the 04 items listed previously)<br>
+                                        • Product Manual (in case it has been updated)<br>
+                                        • Technical specification (in case it has been updated)<br>
+                                        • Electric scheme<br>
+                                      </p>
+                                    </div>
+                            </div>
+                          </div>
+                      </div>
 
         </div>
 
