--- a/page2_en.html
+++ b/page2_en.html
@@ -42,24 +42,35 @@
                 </div>
             </div>
 
-            <div class="col-md-8"><h4 class="font-color">Tips to speed up the process</h4>
-              <p>
-                - Send the product specification containing the complete information regarding the product, as items below. The complete information avoids rework, unexpected delays and costs in the process:<br><br>
 
-                - Frequency Band<br>
-                - Applicable Technologies<br>
-                - Product Application<br>
-                - Where the product is installed<br>
-                - If the product can be operated by the final user or only by professionals<br>
-                - How the product is supplied (Example: battery, power supply, car charger, USB ... etc);<br>
-                - When preparing the samples for the shipment, make sure they are correctly identified with model name.<br><br>
-                Example: If the model name of the product under certification is "Model X", it is very important that the samples have a label or any identification that shows this model name;<br>
-                - When sending the samples to the Versys it is highly recommended that you describe on the package, the Versys project number and also send instructions for testing.<br><br>
-                With this, the project can be identified quickly and with the instructions we can interact with the laboratory in order to speed up the testing;<br>
-                - Send all documents before the issuance of the test reports. With this, we will avoid delays, as we can have partial evaluations and provide you a feedback confirming if corrections are needed or not.<br>
+                      <div class="col-md-8">
+                        <div class="panel-group">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <p class="accordion-toggle"><center>Tips to speed up the process</center></p>
+                                    </h4>
+                                </div>
+                                    <div class="panel-body">
+                                      <p>
+                                        - Send the product specification containing the complete information regarding the product, as items below. The complete information avoids rework, unexpected delays and costs in the process:<br><br>
 
-              </p>
-            </div>
+                                        - Frequency Band<br>
+                                        - Applicable Technologies<br>
+                                        - Product Application<br>
+                                        - Where the product is installed<br>
+                                        - If the product can be operated by the final user or only by professionals<br>
+                                        - How the product is supplied (Example: battery, power supply, car charger, USB ... etc);<br>
+                                        - When preparing the samples for the shipment, make sure they are correctly identified with model name.<br><br>
+                                        Example: If the model name of the product under certification is "Model X", it is very important that the samples have a label or any identification that shows this model name;<br>
+                                        - When sending the samples to the Versys it is highly recommended that you describe on the package, the Versys project number and also send instructions for testing.<br><br>
+                                        With this, the project can be identified quickly and with the instructions we can interact with the laboratory in order to speed up the testing;<br>
+                                        - Send all documents before the issuance of the test reports. With this, we will avoid delays, as we can have partial evaluations and provide you a feedback confirming if corrections are needed or not.<br>
+                                      </p>
+                                    </div>
+                            </div>
+                          </div>
+                      </div>
 
         </div>
 
