--- a/index_en.html
+++ b/index_en.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="col-md-8">
-              <h4 class="font-color">Documentation required</h4>
+              <h4 class="font-color"><center>Documentation required</center></h4>
               <div class="panel-group" id="accordion">
                   <div class="panel panel-default">
                       <div class="panel-heading">
