--- a/page1.html
+++ b/page1.html
@@ -42,39 +42,47 @@
             </div>
           </div>
 
+
+
           <div class="col-md-8">
-              <h4 class="font-color">
-                Manutenção Periódica
-              </h4>
-              <p>
-                Para um processo de manutenção da certificação, existem alguns fatores que precisam ser avaliados para determinar se ensaios são aplicáveis ou se conseguimos fazer a manutenção apenas com evidências documentais.
-                São eles:<br>
-                1 - Se o produto sofreu modificações ou não desde a última certificação;<br>
-                2 - Se a ANATEL mudou a regulamentação no período;<br>
-                3 - Se o produto apresentou alguma não conformidade na certificação inicial que tornou necessária a realização de alguma alteração para adequação;<br>
-                4 - Se é aplicável a Resolução 529 (Ensaios de Segurança) ao produto. Caso positivo, é exigido que este ensaio seja repetido na manutenção, não importando a resposta dos itens anteriores.<br><br>
+            <div class="panel-group">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <p class="accordion-toggle"><center>Manutenção Periódica</center></p>
+                        </h4>
+                    </div>
+                        <div class="panel-body">
+                          <p>
+                            Para um processo de manutenção da certificação, existem alguns fatores que precisam ser avaliados para determinar se ensaios são aplicáveis ou se conseguimos fazer a manutenção apenas com evidências documentais.
+                            São eles:<br>
+                            1 - Se o produto sofreu modificações ou não desde a última certificação;<br>
+                            2 - Se a ANATEL mudou a regulamentação no período;<br>
+                            3 - Se o produto apresentou alguma não conformidade na certificação inicial que tornou necessária a realização de alguma alteração para adequação;<br>
+                            4 - Se é aplicável a Resolução 529 (Ensaios de Segurança) ao produto. Caso positivo, é exigido que este ensaio seja repetido na manutenção, não importando a resposta dos itens anteriores.<br><br>
 
-                Documentação para produto que não sofreu alteração<br>
-                •	Declaração de manutenção (fornecemos o template)<br>
-                •	Fotos externas atuais do produto <br>
-                •	Fotos internas atuais do produto<br>
-                •	Relatórios de Ensaios (será confirmada a necessidade ou não de ensaios após avaliação dos 04 itens acima)<br>
-                •	Certificado ISO 9001 da Unidade fabril – quando aplicável<br><br>
+                            Documentação para produto que não sofreu alteração<br>
+                            •	Declaração de manutenção (fornecemos o template)<br>
+                            •	Fotos externas atuais do produto <br>
+                            •	Fotos internas atuais do produto<br>
+                            •	Relatórios de Ensaios (será confirmada a necessidade ou não de ensaios após avaliação dos 04 itens acima)<br>
+                            •	Certificado ISO 9001 da Unidade fabril – quando aplicável<br><br>
 
-                Documentação para produto que sofreu alteração <br>
-                •	Declaração de manutenção (fornecemos o template)<br>
-                •	Fotos externas atuais do produto<br>
-                •	Fotos internas atuais do produto<br>
-                •	Foto da etiqueta de identificação do modelo<br>
-                •	Certificado ISO 9001 da Unidade fabril – quando aplicável<br>
-                •	Relatórios de ensaios (será confirmada a necessidade ou não de ensaios após avaliarmos os 04 itens descritos inicialmente)<br>
-                •	Manual do produto <br>
-                •	Especificação Técnica <br>
-                •	Esquema elétrico<br>
-              </p>
-
-
-            </div>
+                            Documentação para produto que sofreu alteração <br>
+                            •	Declaração de manutenção (fornecemos o template)<br>
+                            •	Fotos externas atuais do produto<br>
+                            •	Fotos internas atuais do produto<br>
+                            •	Foto da etiqueta de identificação do modelo<br>
+                            •	Certificado ISO 9001 da Unidade fabril – quando aplicável<br>
+                            •	Relatórios de ensaios (será confirmada a necessidade ou não de ensaios após avaliarmos os 04 itens descritos inicialmente)<br>
+                            •	Manual do produto <br>
+                            •	Especificação Técnica <br>
+                            •	Esquema elétrico<br>
+                          </p>
+                        </div>
+                </div>
+              </div>
+          </div>
 
         </div>
 
