--- a/page2.html
+++ b/page2.html
@@ -42,29 +42,39 @@
             </div>
           </div>
 
+
           <div class="col-md-8">
-              <h4 class="font-color">Dicas para acelerar o processo de certificação</h4>
-              <p>
-                - Enviar a especificação técnica do produto contendo todas as informações completas do produto, conforme itens abaixo. Com isso evita-se retrabalhos, atrasos e custos inesperados no processo:<br><br>
+            <div class="panel-group">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <p class="accordion-toggle"><center>Dicas para acelerar o processo de certificação</center></p>
+                        </h4>
+                    </div>
+                        <div class="panel-body">
+                          <p>
+                            - Enviar a especificação técnica do produto contendo todas as informações completas do produto, conforme itens abaixo. Com isso evita-se retrabalhos, atrasos e custos inesperados no processo:<br><br>
 
-                - Frequência de operação do produto<br>
-                - Tecnologias aplicáveis <br>
-                - Aplicação do produto<br>
-                - Local de instalação<br>
-                - Se o produto pode ser operado pelo usuário comum ou apenas por profissionais especializados<br>
+                            - Frequência de operação do produto<br>
+                            - Tecnologias aplicáveis <br>
+                            - Aplicação do produto<br>
+                            - Local de instalação<br>
+                            - Se o produto pode ser operado pelo usuário comum ou apenas por profissionais especializados<br>
 
 
-                - como o produto é alimentado (Ex: bateria, fonte de alimentação, carregador veicular, USB...etc);<br>
+                            - como o produto é alimentado (Ex: bateria, fonte de alimentação, carregador veicular, USB...etc);<br>
 
-                - Ao preparar as amostras para envio, certificar-se que as mesmas estão identificadas corretamente. <br>Ex: Se o modelo do produto sob certificação é “modelo X”, é muito importante que haja nas amostras alguma etiqueta ou qualquer tipo de identificação que mostre este nome de modelo descrito no produto;<br>
+                            - Ao preparar as amostras para envio, certificar-se que as mesmas estão identificadas corretamente. <br>Ex: Se o modelo do produto sob certificação é “modelo X”, é muito importante que haja nas amostras alguma etiqueta ou qualquer tipo de identificação que mostre este nome de modelo descrito no produto;<br>
 
-                - Ao enviar as amostras para a Versys é recomendável que, no pacote esteja descrito o número de processo Versys e que haja instruções para a realização dos ensaios.<br> Desta forma, o projeto e identificado rapidamente e com as instruções podemos interagir mais rapidamente com o laboratório também afim de agilizar a realização dos ensaios;<br>
+                            - Ao enviar as amostras para a Versys é recomendável que, no pacote esteja descrito o número de processo Versys e que haja instruções para a realização dos ensaios.<br> Desta forma, o projeto e identificado rapidamente e com as instruções podemos interagir mais rapidamente com o laboratório também afim de agilizar a realização dos ensaios;<br>
 
-                - Encaminhar toda documentação do processo de certificação antes da emissão dos relatórios de ensaios. Com isso, evitaremos atrasos e poderemos realizar uma avaliação parcial do que for enviado e para lhe fornecer um feedback sobre possíveis correções necessárias;<br>
+                            - Encaminhar toda documentação do processo de certificação antes da emissão dos relatórios de ensaios. Com isso, evitaremos atrasos e poderemos realizar uma avaliação parcial do que for enviado e para lhe fornecer um feedback sobre possíveis correções necessárias;<br>
 
-              </p>
-            </div>
-
+                          </p>
+                        </div>
+                </div>
+              </div>
+          </div>
         </div>
 
     </div>
