--- a/page1.html
+++ b/page1.html
@@ -53,7 +53,7 @@
                         </h4>
                     </div>
                         <div class="panel-body">
-                          <p>
+                          <p align="justify">
                             Para um processo de manutenção da certificação, existem alguns fatores que precisam ser avaliados para determinar se ensaios são aplicáveis ou se conseguimos fazer a manutenção apenas com evidências documentais.
                             São eles:<br>
                             1 - Se o produto sofreu modificações ou não desde a última certificação;<br>
