--- a/page1_en.html
+++ b/page1_en.html
@@ -52,7 +52,7 @@
                                     </h4>
                                 </div>
                                     <div class="panel-body">
-                                      <p>
+                                      <p align="justify">
                                         For a renewal process, there are some factors that need to be considered in order to determine whether tests are applicable or if we can proceed with the renewal only with the documentation. They are the following:<br>
                                          1 - If the product has been modified since the last certification or not;<br>
                                          2 - If ANATEL changed the rules during the period;<br>
