--- a/page2.html
+++ b/page2.html
@@ -52,7 +52,7 @@
                         </h4>
                     </div>
                         <div class="panel-body">
-                          <p>
+                          <p align="justify">
                             - Enviar a especificação técnica do produto contendo todas as informações completas do produto, conforme itens abaixo. Com isso evita-se retrabalhos, atrasos e custos inesperados no processo:<br><br>
 
                             - Frequência de operação do produto<br>
