--- a/page2_en.html
+++ b/page2_en.html
@@ -52,7 +52,7 @@
                                     </h4>
                                 </div>
                                     <div class="panel-body">
-                                      <p>
+                                    <p align="justify">
                                         - Send the product specification containing the complete information regarding the product, as items below. The complete information avoids rework, unexpected delays and costs in the process:<br><br>
 
                                         - Frequency Band<br>
